fix alignment issue

--- a/explorer/client/src/pages/transaction-result/TransactionResult.module.css
+++ b/explorer/client/src/pages/transaction-result/TransactionResult.module.css
@@ -41,13 +41,13 @@
 }
 
 .itemviewcontent .itemviewcontentitem {
-    @apply grid gap-1 text-[14px] md:text-[15px] text-gray-500;
+    @apply grid gap-1 text-[14px] md:text-[15px] text-gray-500 py-2;
 
     grid-template-columns: 1fr 3fr;
 }
 
 .itemviewcontentvalue {
-    @apply text-sm pt-2 pb-2 text-gray-800 inline-flex content-center items-baseline md:block;
+    @apply text-sm  text-gray-800 inline-flex content-center items-baseline md:block;
 
     line-break: anywhere;
     box-sizing: border-box;
@@ -58,9 +58,7 @@
     @apply break-all font-mono text-sm text-sui-dark;
 }
 
-.itemviewcontentlabel {
-    @apply pt-2 pb-2;
-}
+
 
 @media (min-width: 40em) {
     .itemviewcontent .itemviewcontentitem {
